update final tarea 1

--- a/Tarea1/Punto 5.ipynb
+++ b/Tarea1/Punto 5.ipynb
@@ -1,9 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "01a54d43",
+   "metadata": {},
+   "source": [
+    "Considere la siguiente ecuación diferencial:\n",
+    "$$\\frac{du}{dt}=\\alpha u, u(0)=u_0$$\n",
+    "Pruebe que aplicando iterativamente se obtiene \n",
+    "$$u_k=(1+\\alpha\\Delta t)^k u_0$$\n",
+    "para el caso de $\\alpha<0$.\n",
+    "\n",
+    "Para realizar esta demostración se hará el uso del método de inducción en $k$.\n",
+    "\n",
+    "- Caso Base. $k=0, u_0=(1+\\alpha\\Delta t)^0 u_0 = u_0 = u(0).$\n",
+    "- Hipótesis de Inducción. Suponga que $u_n =(1+\\alpha\\Delta t)^n u_0,\\alpha<0$ se satisface.\n",
+    "- Paso Inductivo. Para desarrollar el paso inductivo se utilizará el método de Euler, el cual establece una relación recursiva de la forma $u_{n+1}=u_n+u_n\\alpha\\Delta t$ tomando $h=\\Delta t$ y $u_n' = u_n\\alpha$. Considere entonces el paso de $k=n+1$ $$u_{n+1} = u_n(1+\\alpha\\Delta t)$$ por la hipótesis de inducción $$u_{n+1} = (1+\\alpha\\Delta t)^n u_0(1+\\alpha\\Delta t)=(1+\\alpha\\Delta t)^{n+1} u_0$$\n",
+    "\n",
+    "Mostrando así que se cumple para todo $n$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dadf4b8c",
+   "metadata": {},
+   "source": [
+    "Ahora bien, intuitivamente, la solución oscillará si $\\Delta t>\\frac{-1}{\\alpha}$, pues de esta desigualdad se tiene que $$1+\\alpha\\Delta t<0$$ si tomamos $$(1+\\alpha\\Delta t)^k<0$$ esta desigualdad se cumple únicamente para el caso de $k=2n+1$, pues si $k$ es par, las soluciones serán positivas. Por lo que se sigue un comportamiento oscilatorio."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "2f023577",
+   "execution_count": null,
+   "id": "a6f9c291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
