--- a/Notas de Clase/Clase5_ParabolicoFriccion.ipynb
+++ b/Notas de Clase/Clase5_ParabolicoFriccion.ipynb
@@ -132,10 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "5c8b87c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'integrate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[43mintegrate\u001b[49m\u001b[38;5;241m.\u001b[39modeint(System, r0, t, args\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m2.\u001b[39m,))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'integrate' is not defined"
+     ]
+    }
+   ],
    "source": [
     "r = integrate.odeint(System, r0, t, args=(2.,))"
    ]
