Update Punto 2 Parcial 1

--- a/Parcial1/Falling rod.ipynb
+++ b/Parcial1/Falling rod.ipynb
@@ -3,19 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5680be00",
+   "id": "51665c22",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy import integrate"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22357b7c",
+   "id": "ffa8a840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +29,7 @@
     "    - L: Longitud de la varilla (predeterminado como 1 metro)\n",
     "\n",
     "    Retorna:\n",
-    "    - Lista con dos calores actualizados de \n",
+    "    - Lista con dos calores actualizados de velocidad y aceleración angular.\n",
     "    \"\"\"\n",
     "    \n",
     "    g = 9.81\n",
@@ -45,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2ea31b3b",
+   "execution_count": 3,
+   "id": "1e88f8d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Integrator2(f, r0, t):\n",
-    "    \n",
+    "\n",
     "    h = t[1] - t[0]\n",
     "    #print(h)\n",
     "    \n",
@@ -91,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "46991ab4",
+   "execution_count": 4,
+   "id": "933e23f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "46c2c341",
+   "execution_count": 5,
+   "id": "7eec3445",
    "metadata": {
     "scrolled": true
    },
@@ -115,17 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "2203737c",
+   "execution_count": 6,
+   "id": "3d8229bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x11ed77d60>"
+       "<matplotlib.collections.PathCollection at 0x118409600>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -145,26 +144,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6119d0d7",
+   "cell_type": "markdown",
+   "id": "b837c287",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'r' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#plt.plot(x,y)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(np\u001b[38;5;241m.\u001b[39msin(\u001b[43mr\u001b[49m[:,\u001b[38;5;241m0\u001b[39m])\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m,np\u001b[38;5;241m.\u001b[39mcos(r[:,\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'r' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "#plt.plot(x,y)\n",
-    "plt.plot(np.sin(r[:,0])/2,np.cos(r[:,1])/2)"
+    "Obteniendo así que el tiempo de caida es aproximadamente medio segundo."
    ]
   }
  ],
