--- a/Tarea2/Punto 6.ipynb
+++ b/Tarea2/Punto 6.ipynb
@@ -15,16 +15,208 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14b38738",
+   "cell_type": "markdown",
+   "id": "0ca382be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Demuestre las expresiones de la Ecuaciones \n",
+    "$$r(t + \\Delta t) = r(t) + v(t)\\Delta t + \\frac{1}{2} a(t) (\\Delta t)^2 $$\n",
+    "\n",
+    "$$v(t + \\Delta t) = v(t) +\\frac{\\Delta t}{2}(a(t+\\Delta t) +a(t))$$\n",
+    "\n",
+    "y \n",
+    "$$\\vec{r(0)} = [a(1+e), 0. ]$$\n",
+    "$$\\vec{v(0)} = [0., \\sqrt{G\\frac{1-e}{a(1+e)}} ]$$\n",
+    "\n",
+    "\n",
+    "Tomando $r(t + \\Delta t)$ y haciendo su expansión en Taylor hasta el término cuadratico, da como resultado:\n",
+    "\n",
+    "$$r(t + \\Delta t) = r(t) + \\dot{r(t)}\\Delta t + \\frac{1}{2} \\ddot{r(t)} (\\Delta t)^2 $$\n",
+    "\n",
+    "Esto es igual a: \n",
+    "\n",
+    "$$r(t + \\Delta t) = r(t) + v(t)\\Delta t + \\frac{1}{2} a(t) (\\Delta t)^2 $$\n",
+    "\n",
+    "Para $v(t + \\Delta t)$, tomamos el término $r(t - \\Delta t)$ y lo expandimos hasta el término cuadratico:\n",
+    "\n",
+    "$$r(t - \\Delta t) = r(t) - v(t)\\Delta t + \\frac{1}{2} a(t) (\\Delta t)^2 $$\n",
+    "\n",
+    "Despejando $v(t)(\\Delta t)$ de $r(t - \\Delta t)$ y de $r(t + \\Delta t)$\n",
+    "\n",
+    "$$v(t)(\\Delta t) =  r(t) - r(t - \\Delta t) + \\frac{1}{2} a(t) (\\Delta t)^2$$\n",
+    "\n",
+    "$$v(t)(\\Delta t) =  -r(t) + r(t + \\Delta t) - \\frac{1}{2} a(t) (\\Delta t)^2 $$\n",
+    "\n",
+    "Sumando ambas ecuaciones, da como resultado\n",
+    "\n",
+    "$$2 v(t)(\\Delta t) =  r(t + \\Delta t) -  r(t - \\Delta t) $$\n",
+    "\n",
+    "Despejando $v(t)$:\n",
+    "\n",
+    "$$v(t) = \\frac{r(t + \\Delta t) -  r(t - \\Delta t)}{2(\\Delta t)} $$\n",
+    "\n",
+    "Por lo tanto, si sumamos a $t \\rightarrow t + \\Delta t$, se tiene que:\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{r(t + 2\\Delta t) -  r(t)}{2(\\Delta t)} $$\n",
+    "\n",
+    "Sumando teérminos $r(t+\\Delta t) - r(t+\\Delta t) + r(t-\\Delta t) - r(t-\\Delta t) = 0$, queda la ecuación de la siguiente manera:\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{1}{2(\\Delta t)}(r(t + 2\\Delta t) -  r(t) + r(t+\\Delta t) - r(t+\\Delta t) + r(t-\\Delta t) - r(t-\\Delta t)) $$\n",
+    "\n",
+    "\n",
+    "Reemplazando $- r(t+\\Delta t) = - 2r(t+\\Delta t) + r(t+\\Delta t)$ y $- r(t) = - 2r(t) + r(t) $\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{1}{2(\\Delta t)}[r(t + 2\\Delta t) - 2r(t+\\Delta t) + r(t+\\Delta t) +  r(t) + r(t+\\Delta t) - 2r(t) - r(t-\\Delta t) + r(t-\\Delta t)] $$\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{1}{2(\\Delta t)}[r(t + 2\\Delta t) - 2r(t+\\Delta t) +  r(t) + r(t+\\Delta t) - 2r(t)  + r(t-\\Delta t)]   + \\frac{1}{2(\\Delta t)}[r(t+\\Delta t)- r(t-\\Delta t)]$$\n",
+    "\n",
+    "Dado que$ \\frac{1}{2(\\Delta t)}[r(t+\\Delta t)- r(t-\\Delta t)]$ es la derivada central, entonces es igual a $v(t)$\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{1}{2(\\Delta t)}[r(t + 2\\Delta t) - 2r(t+\\Delta t) +  r(t) + r(t+\\Delta t) - 2r(t)  + r(t-\\Delta t)]   + v(t)$$\n",
+    "\n",
+    "Se multiplica y se divide por $\\Delta t$\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{\\Delta t}{2}\\frac{[r(t + 2\\Delta t) - 2r(t+\\Delta t) +  r(t) + r(t+\\Delta t) - 2r(t)  + r(t-\\Delta t)]}{(\\Delta t)^2}   + v(t)$$\n",
+    "\n",
+    "$$v(t+ \\Delta t) = \\frac{\\Delta t}{2}(\\frac{[r(t + 2\\Delta t) - 2r(t+\\Delta t) +  r(t)]}{(\\Delta t)^2} + \\frac{[r(t+\\Delta t) - 2r(t)  + r(t-\\Delta t)]}{(\\Delta t)^2} )  + v(t)$$\n",
+    "\n",
+    "\n",
+    "Usando la ecuación $r(t + \\Delta t) = r(t) + v(t)\\Delta t + \\frac{1}{2} a(t) (\\Delta t)^2 $ y despejando la aceleración:\n",
+    "\n",
+    "$$a(t) = \\frac{2(r(t + \\Delta t)-r(t)-v(t)\\Delta t)}{(\\Delta t)^2}$$\n",
+    "\n",
+    "Para la ecuación de $a(t)$ tomamos $t \\rightarrow t + \\Delta t$, entonces quedaría de la siguiente manera:\n",
+    "\n",
+    "$$a(t+\\Delta t) = \\frac{2(r(t + 2\\Delta t)-r(t+\\Delta t)-v(t+\\Delta t)\\Delta t)}{(\\Delta t)^2}$$\n",
+    "\n",
+    "Para las ecuaciones de aceleración encontradas, se reemplaza $v(t) = \\frac{r(t + \\Delta t) -  r(t - \\Delta t)}{2(\\Delta t)} $ y $v(t+ \\Delta t) = \\frac{r(t + 2\\Delta t) -  r(t)}{2(\\Delta t)} $, quedan de la siguiente forma:\n",
+    "\n",
+    "$$a(t) = \\frac{2r(t + \\Delta t)-2r(t)-r(t + \\Delta t) +  r(t - \\Delta t)}{(\\Delta t)^2}$$\n",
+    "\n",
+    "$$a(t+\\Delta t) = \\frac{2r(t + 2\\Delta t)-2r(t+\\Delta t)-r(t + 2\\Delta t) +  r(t)}{(\\Delta t)^2}$$\n",
+    "\n",
+    "Se suman ambas ecuaciones:\n",
+    "\n",
+    "$$a(t) +a(t+\\Delta t) = \\frac{2r(t + 2\\Delta t)+ 2r(t + \\Delta t)-2r(t+\\Delta t)-2r(t)-r(t + \\Delta t) +  r(t - \\Delta t) -r(t + 2\\Delta t) +  r(t)}{(\\Delta t)^2}$$\n",
+    "\n",
+    "Reorganizando términos, se tiene: $$a(t) +a(t+\\Delta t) = \\frac{r(t + 2\\Delta t) - 2r(t+\\Delta t) +  r(t) + r(t+\\Delta t) - 2r(t)  + r(t-\\Delta t)}{(\\Delta t)^2}$$\n",
+    "Este término, es igual al término dentro de los parentesis $()$ a la derecha de $$v(t+ \\Delta t) = \\frac{\\Delta t}{2}(\\frac{[r(t + 2\\Delta t) - 2r(t+\\Delta t) +  r(t)]}{(\\Delta t)^2} + \\frac{[r(t+\\Delta t) - 2r(t)  + r(t-\\Delta t)]}{(\\Delta t)^2} )  + v(t)$$\n",
+    "\n",
+    "Por lo tanto, la demostración queda hecha:\n",
+    "$$v(t + \\Delta t) = v(t) +\\frac{\\Delta t}{2}(a(t+\\Delta t) +a(t))$$\n",
+    "\n",
+    "Para la ecuación $$\\vec{r(0)} = [a(1+e), 0. ]$$\n",
+    "\n",
+    "Dado que la excentricidad de una elipse, $(e)$, es la razón entre la longitud del segmento que va desde el centro de la elipse hasta uno de sus focos $(c)$, y su semieje mayor $(a)$, se puede expresar de la siguiente manera su excentricidad:\n",
+    "\n",
+    "$$e = \\frac{c}{a}$$\n",
+    "\n",
+    "Teniendo en cuenta que el sol se encuentra en uno de los focos de la elipse y que mercurio está en el afelio, quiere decir que Mercurio se encuentra dentro de la recta que generan los vertices de su órbita. Por lo tanto, $r_{y-Sol}-r_{y-Mercurio}=0$, es decir, su distancia solo depende de su distancia con respecto al sol en ele eje $x$.\n",
+    "\n",
+    "Además, sabiendo que el Sol esta en uno de los focos y que estos tienen una distancia $c$ hasta el centro, entonces la distancia del Sol a Mercurio que esta ubicado en el afelio (semieje mayor) estaria dada por:\n",
+    "\n",
+    "$$ R = c +a $$\n",
+    "\n",
+    "Usando la ecuación $e = \\frac{c}{a}$ y despejando $c$, $c=a e $. Reemplazando dentro de $R$:\n",
+    "\n",
+    "$$ R = ae +a$$\n",
+    "Por lo tanto:\n",
+    "$$R = a(1+e)$$\n",
+    "\n",
+    "Para la ecuación $$\\vec{v(0)} = [0., \\sqrt{G\\frac{1-e}{a(1+e)}} ]$$:\n",
+    "\n",
+    "Dado que Mercurio tiene cierta velocidad, este posee energía cinética en toda su órbita. Además, esta sujeto a la fuerza de gravedad del Sol, por lo tanto, tiene una energía potencial gravitacional. Entonces su energía en cualquier instante de tiempo, está dada por:\n",
+    "\n",
+    "$$E = \\frac{1}{2}m v^2 - \\frac{G M m }{r}$$\n",
+    "Dado que la energía se conserva, podemos igualar la energía en dos momentos diferentes, en el momento en que esta en el afelio y cuando está en el preihelio, quedan así la igualdad:\n",
+    "\n",
+    "$$ E_{a} = E_{p} $$\n",
+    "$$\\frac{1}{2}m v_{a}^2 - \\frac{G M m }{r_{a}}= \\frac{1}{2}m v_{p}^2 - \\frac{G M m }{r_{p}}$$\n",
+    "\n",
+    "\n",
+    "Además, toca tener en cuenta el momento angular, ya que, hay un objeto orbitando a otro, y no hay fuerzas exteriores que le afecten, solo la fuerza centripeta. Los momentos angulares en el perihhelio y en el afelio se definen como: \n",
+    "\n",
+    "$$L_{p}=mr_{p}v_{p}$$ \n",
+    "$$L_{a}=mr_{a}v_{a}$$\n",
+    "\n",
+    "Igualando $ L_p $ y $ L_a $:\n",
+    "\n",
+    "$$ m r_p v_p = m r_a v_a $$\n",
+    "\n",
+    "Ahora, para despejar $v_p$, dividimos ambos lados de la ecuación por $ m* r_p $:\n",
+    "\n",
+    "$$ v_p = \\frac{r_a}{r_p} v_a $$\n",
+    "\n",
+    "Ahora, se despeja $v_a$:\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2} v_{a}^2 -\\frac{1}{2}  \\frac{r_a^2}{r_p^2} v_a^2 = -\\frac{G M }{r_p} + \\frac{G M }{r_a}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "v_{a}^2= 2GM(\\frac{r_p(r_p-r_a)}{r_{a}(r_{a}^2+r_{p}^2)}\n",
+    "$$\n",
+    "\n",
+    "Finalmente, tomamos la raíz cuadrada de ambos lados para despejar $v_a$:\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{2GM\\frac{r_p(r_p-r_a)}{r_{a}(r_{a}^2-r_{p}^2)}}\n",
+    "$$\n",
+    "$$\n",
+    "v_a = \\sqrt{2GM\\frac{r_p}{r_{a}(r_{a}+r_{p})}}\n",
+    "$$\n",
+    "\n",
+    "Asimismo como se calculoó la distancia al afelio, se puede calcular la distancia al perihelio, que quedaría de la siguiente manera:\n",
+    "\n",
+    "$$ r_{p} = -ae +a$$\n",
+    "Por lo tanto:\n",
+    "$$r_{p} = a(1-e)$$\n",
+    "\n",
+    "Además, usando la ecuación hallada anteriormente, $r_{a}= a(1+e)$\n",
+    "\n",
+    "Reemplazamos $r_p$ y $r_a$ en la ecuación:\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{2GM\\frac{a(1-e)}{a(1+e)(a(1+e) + a(1-e))}}\n",
+    "$$\n",
+    "\n",
+    "Simplificamos los términos:\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{2GM\\frac{a(1-e)}{a(1+e)(a(1+e) + a(1-e))}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{2GM\\frac{a(1-e)}{a(1+e)(2a)}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{2GM\\frac{(1-e)}{(1+e)(2)}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{\\frac{GM(1-e)}{(1+e)}}\n",
+    "$$\n",
+    "\n",
+    "Por lo tanto, la expresión simplificada para \\(v_a\\) después de reemplazar \\(r_p\\) y \\(r_a\\) es:\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{\\frac{GM(1-e)}{(1+e)}}\n",
+    "$$\n",
+    "\n",
+    "Teniendo en cuenta que estamos usando masas solares y $M$ es la masa del sol, $M=1 masa solar$. Quedan así la ecuación:\n",
+    "\n",
+    "$$\n",
+    "v_a = \\sqrt{\\frac{G(1-e)}{(1+e)}}\n",
+    "$$\n",
+    "Teniendo en cuenta que el afelio está situado en el eje $x$, esto implica que la velocidad tangencial en este mismo eje va a ser $0$. Por lo tanto, la velocidad en este punto depende únicamente del la componente en $y$. Quedando así la velocidad por sus componentes en $x$ y $y$:\n",
+    "\n",
+    "$$\\vec{v(0)} = [0., \\sqrt{G\\frac{1-e}{a(1+e)}} ]$$"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "id": "2352e518",
    "metadata": {},
    "outputs": [],
@@ -75,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "d393dc18",
+   "id": "8ac15fb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7bad549d",
+   "id": "72258036",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "653a650f",
+   "id": "b42e905d",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "3cff2d23",
+   "id": "66fdbf4a",
    "metadata": {},
    "outputs": [],
    "source": [
