--- a/Parcial2/Algoritmo multi-paso.ipynb
+++ b/Parcial2/Algoritmo multi-paso.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f0314169",
+   "id": "0a793768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e27f5086",
+   "id": "61fb0c0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7245e2c2",
+   "id": "c19b8d9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a20fbe8",
+   "id": "1e8fae78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5d94472",
+   "id": "fe9f0002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "bb28588b",
+   "execution_count": 6,
+   "id": "c48ea668",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -166,12 +166,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8261fc5b",
+   "cell_type": "markdown",
+   "id": "28aac52c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Se puede observar que los primeros pasos tienen un error mayor a los siguientes, esto debido al uso de Runge-Kutta."
+   ]
   }
  ],
  "metadata": {
