--- a/Tarea4/Puntos 1, 2 y 3.ipynb
+++ b/Tarea4/Puntos 1, 2 y 3.ipynb
@@ -9,16 +9,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30cc99ba",
+   "cell_type": "markdown",
+   "id": "059e5102",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Expandiendo en Taylor,\n",
+    "\n",
+    "$$ x_{n+1} = x_n + v_nh + \\frac{h^2}{2} a_n + \\frac{h^3}{6} s_n$$\n",
+    "\n",
+    "Para la aceleración, teniendo en cuenta la tarea 2 y la expresión mostrada en el artículo\n",
+    "\n",
+    "$$ a_{n+1} = a_n + h S_n $$\n",
+    "$$ a_{n+1} = a_n + h \\left(\\frac{a_{n+1}-a_{n-1} }{2h} \\right)$$\n",
+    "$$ a_{n+1} = 2a_n - a_{n-1}$$\n",
+    "\n",
+    "\n",
+    "$$x_{n+1} = x_n + v_n h + \\frac{h^2}{2}a_n + \\frac{h^3}{6}\\frac{a_{n+1}-a_{n-1}}{2h}$$\n",
+    "$$x_{n+1}= x_n + v_n h + \\frac{h^2}{2}a_n + \\frac{h^3}{6}\\frac{2a_n-a_{n-1}-a_{n-1}}{2h}$$\n",
+    "$$x_{n+1}= x_n + v_n h + \\frac{h^2}{2}a_n + \\frac{h^2}{6}a_n - \\frac{h^2}{6}a_n$$\n",
+    "$$x_{n+1}= x_n + v_n h + \\frac{4 h^2}{6}a_n - \\frac{h^2}{6}a_{n-1}$$\n",
+    "\n",
+    "De la ecuación del paper\n",
+    "$$a_{n-1} = 2a_n + a_{n+1}$$\n",
+    "\n",
+    "$$x_{n+1} = x_n + v_n h + \\frac{h^2}{2}a_n + \\frac{h^3}{6}\\left( \\frac{a_{n+1}-(2a_n - a_{n+1})}{2h}\\right)$$\n",
+    "$$x_{n+1} = x_n + v_n h + \\frac{h^2}{2}a_n + \\frac{h^2}{6}(a_{n+1} - a_n)$$\n",
+    "$$x_{n+1} = x_n + v_n h + \\frac{h^2}{6}a_{n+1} + \\frac{h^2}{3}a_n$$\n",
+    "\n",
+    "Igualando a la primera ecuación:\n",
+    "\n",
+    "$$x_{n+1} = 2r_n - r_{n-1} + h^2a_n$$\n",
+    "\n",
+    "$$2x_n - x_{n-1} + h^2 a_n = x_n + v_n + \\frac{4}{6}h^2a_n - \\frac{h^2 a_{n-1}}{6}$$\n",
+    "$$ x_n - x_{n-1} + \\frac{1}{3} a_n h^2 + \\frac{1}{6} a_{n-1} h^2= v_n h$$\n",
+    "$$ x_n - x_{n-1} + \\frac{1}{6} (2a_n h^2 + a_{n-1} h^2) = v_n h$$\n",
+    "\n",
+    "Mostramdo así\n",
+    "\n",
+    "$$x_{n+1} = x_n + hv_n + \\frac{h^2}{6}(4a_n - a_{n-1})$$\n",
+    "$$x_{n+1} = x_n + hv_n + \\frac{h^2}{6}(a_{n+1} + 2a_{n})$$\n",
+    "$$h v_{n+1} = x_{n+1} - x_n + \\frac{h^2}{6}(2a_{n+1} + a_{n})$$"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ba27c7e",
+   "id": "c67b582f",
    "metadata": {},
    "source": [
     "# Punto 2. Integrador de Adams-Bashforth. "
@@ -80,7 +115,7 @@
     "\n",
     "$$\\int_{t_n}^{t_{n+1}} P_2(t) dt = \\int_{t_n}^{t_{n+1}} \\left(\\frac{(t - t_{n})(t - t_{n+1})}{(t_{n-1} - t_{n})(t_{n-1} - t_{n+1})}f_{n-1} + \\frac{(t - t_{n-1})(t - t_{n+1})}{(t_{n} - t_{n-1})(t_{n} - t_{n+1})}f_{n} + \\frac{(t - t_{n-1})(t - t_{n})}{(t_{n+1} - t_{n-1})(t_{n+1} - t_{n})}f_{n+1} \\right) dt$$\n",
     "\n",
-    "Después de realizar la integración, llegamos a la fórmula de iteración para el Integrador de Adams-Moulton de tres puntos:\n",
+    "Después de la integración, llegamos a la fórmula de iteración para el Integrador de Adams-Moulton de tres puntos:\n",
     "\n",
     "$$y_{n+1} = y_n + \\frac{h}{12}\\left(5f_{n+1} + 8f_{n} - f_{n-1}\\right)$$\n",
     "\n",
@@ -94,7 +129,7 @@
     "\n",
     "$$\\int_{t_n}^{t_{n+1}} P_3(t) dt = \\int_{t_n}^{t_{n+1}} \\frac{(t - t_{n-1})(t - t_{n})(t - t_{n+1})}{(t_{n-2} - t_{n-1})(t_{n-2} - t_{n})(t_{n-2} - t_{n+1})}f_{n-2} + \\frac{(t - t_{n-2})(t - t_{n})(t - t_{n+1})}{(t_{n-1} - t_{n-2})(t_{n-1} - t_{n})(t_{n-1} - t_{n+1})}f_{n-1} + \\frac{(t - t_{n-2})(t - t_{n-1})(t - t_{n+1})}{(t_{n} - t_{n-2})(t_{n} - t_{n-1})(t_{n} - t_{n+1})}f_{n} + \\frac{(t - t_{n-2})(t - t_{n-1})(t - t_{n})}{(t_{n+1} - t_{n-2})(t_{n+1} - t_{n-1})(t_{n+1} - t_{n})}f_{n+1} dt$$\n",
     "\n",
-    "Después de realizar la integración, llegamos a la fórmula de iteración para el Integrador de Adams-Moulton de cuatro puntos:\n",
+    "Después de la integración, llegamos a la fórmula de iteración para el Integrador de Adams-Moulton de cuatro puntos:\n",
     "\n",
     "$$y_{n+1} = y_n + \\frac{h}{24}\\left(9f_{n+1} + 19f_n - 5f_{n-1} + f_{n-2}\\right)$$\n",
     "\n",
